li 实现首页，图书列表页，详情页

--- a/wxdemo/pages/details/details.wxml
+++ b/wxdemo/pages/details/details.wxml
@@ -1,2 +1,6 @@
 <!--pages/details/details.wxml-->
-<text>pages/details/details.wxml</text>
+<view>
+    <text>{{data.title}}</text>
+    <text>{{data.summary}}</text>
+</view>
+
