li swiper,地图获取位置，录音，熟悉API接口

--- a/wxdemo/pages/books/book.wxss
+++ b/wxdemo/pages/books/book.wxss
@@ -31,3 +31,12 @@ text {
     display: flex;
     flex-direction: column;
 }
+.slide-image {
+    width:100%;
+}
+swiper {
+display:block;
+height:300px;
+margin-bottom:20px;
+
+}
