--- a/wxdemo/pages/home/home.wxss
+++ b/wxdemo/pages/home/home.wxss
@@ -1,5 +1,11 @@
 /* pages/home/home.wxss */
-input,slider,switch,button {
+.title {
+    border-bottom:1px solid #ffc0cb;
+    padding-bottom:5px;
+    margin:-10px auto 20px;
+
+}
+input,slider,button {
     width: 50%;
 }
 .flex-box {
@@ -39,3 +45,26 @@ view {
 radio {
     margin:0 10px;
 }
+
+.section_img {
+    text-align:center;
+}
+.section_img image {
+    border: 1px solid #ffc0cb;
+    background-color:#ffc0cb;
+    border-radius:100%;
+    width:150px;
+    height:150px;
+}
+.position {
+    /*display:inline;*/
+    color: slategray;
+    font-size:15px;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    width: 40%;
+    
+}
+
