--- a/wxdemo/pages/index/index.wxss
+++ b/wxdemo/pages/index/index.wxss
@@ -111,3 +111,22 @@
     -webkit-line-clamp: 3;
 }
 
+.slide-image {
+    width:100%;
+}
+swiper {
+    display:block;
+    height:300px;
+}
+
+.top {
+    position: fixed;
+    bottom:20px;
+    right: 20px;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    background-color:rgba(158, 158, 158, 0.5);
+    text-align: center;
+    line-height: 30px;
+}
